Make sheduler use repository
